# wat-job-research

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
.claude/commands/: collect-jobs.md  schedule-collect.md
dashboard/: app.js  index.html
docs/plans/: 2026-06-10-job-search-workflow.md
docs/specs/: 2026-06-10-job-search-workflow-design.md
profile/: README.md  profile.md.example
scripts/: collect-jobs-hourly.sh
tests/llm/: test_draft_ats_answers_mocked.py  test_draft_cover_letter_mocked.py  test_score_llm_mocked.py
tests/parsers/: test_get_job_details_parser.py  test_resolve_location.py  test_search_jobs_parser.py
tests/parsers/fixtures/: linkedin_job_detail_4417627058.html  (+2 more)
tests/smoke/: test_end_to_end_offline.sh
tests/unit/: test_db_store.py  test_extract_skills.py  test_mark_submitted.py  test_score_keyword.py  test_search_pagination.py  test_server_routes.py  test_skill_dictionary.py  test_stage.py  test_tailor.py  test_workflow_search.py
tools/: run.sh
tools/application/: draft_ats_answers.py  draft_cover_letter.py  mark_submitted.py  stage.py
tools/cv/: render.py  render_body_weasy.py  render_with_source_header.py  tailor.py
tools/db/: ingest.py  schema.sql  store.py
tools/linkedin/: get_job_details.py  resolve_location.py  search_jobs.py
tools/match/: extract_skills.py  score_keyword.py  score_llm.py
tools/server/: __main__.py  app.py  backfill_jobs.py  pdf_jobs.py
tools/shared/: ats_questions.yml  http.py  skill_dictionary.yml
tools/workflow/: search.py
workflows/: find-and-apply-jobs.md
(+4 files in other folders)
