[project]
name = "wat-job-search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "curl-cffi>=0.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "jinja2>=3.1",
    "anthropic>=0.34",
    "rendercv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []                # CLI scripts only, no installable package

[tool.ruff]
line-length = 100
